# make-my-resume

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml
resume-generator/: Dockerfile  README.md  jest.config.js  middleware.js  next.config.js  package-lock.json  package.json
resume-generator-api/: .flake8  .pylintrc  Dockerfile  build.sh  dev.txt  manage.py  pyproject.toml  pytest.ini  requirements.txt
resume-generator-api/.github/workflows/: unittest-and-linting.yml
resume-generator-api/api/: serializers.py  urls.py  utils.py  views.py
resume-generator-api/api/templates/pdf/: candidate_resume.html
resume-generator-api/api/tests/: conftest.py  test_candidate.py  test_candidate_ci.py  test_candidate_cpe.py  test_professional_experience.py
resume-generator-api/rbac/: admin.py
resume-generator-api/rbac/migrations/: 0001_initial.py
resume-generator-api/resume/: admin.py  models.py
resume-generator-api/resume/migrations/: 0001_initial.py
resume-generator-api/resume_generator_api/: asgi.py  settings.py  urls.py  wsgi.py
resume-generator/__tests__/: index.test.tsx  login.test.tsx  resume.test.tsx
resume-generator/components/: BasicInformation.tsx  CandidateTable.tsx  LoginForm.tsx  NewUserModal.tsx  ProfessionalExperience.tsx  ProfessionalExperienceModal.tsx
resume-generator/hooks/: useDebounce.ts  useFetchResume.ts
resume-generator/interfaces/: ExtendedNextApiRequest.ts
resume-generator/jest/: Wrapper.tsx
resume-generator/pages/: _app.tsx
resume-generator/requests/: requests.ts
resume-generator/shared/: ExtendNextApiRequest.ts  (+1 more)
(+25 files in other folders)
