[tool.poetry]
name = "resume-generator-api"
version = "0.1.0"
description = ""
authors = ["mgbld <112904350+mgbld@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "resume_generator_api"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
ipython = "^8.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
